# bubbler

./: Cargo.toml  deploy.sh
src/: main.rs  routes.rs  scheduler.rs
src/routes/: config.rs  machine.rs
