[package]
name = "bubbler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
futures = "0.3.30"
gpio-cdev = {version = "0.6.0", features = ["async-tokio"]}
libc = "0.2.154"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
